--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
  <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<meta charset="UTF-8"></meta>
-		<!-- Autores
-			 Antonio Martinez Algar
-			 Antonio Jesús Pacheco Tortosa
-		 -->
+		<meta charset="UTF-8">
+		<meta name="description" content="Práctica HLC">
+		<meta name="keywords" content="HTML,CSS">
+		<meta name="author" content="Antonio Martinez Algar">
+		<meta name="author" content="Antonio Jesús Pacheco Tortosa">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Inicio</title>
 	</head>
 	<body>
