--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
 		<p>This is a paragraph.</p>
 		<script src="prueba.js"></script>
 		<button onclick="createParagraph()">¡Presioname!</button>
+		<footer>
+			<p>Curso original de <a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Openwebinars</a></p>
+			<p>Página validada en <a href="https://validator.w3.org/">validator.w3.org</a></p>
+		</footer>
 	</body>
 </html> 
