--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,11 @@
 		</nav>
 		<script src="prueba.js"></script>
 		<button onclick="createParagraph()">¡Presioname!</button>
+		<aside>
+			<p>Primer menú</p>
+			<p>Segundo menú</p>
+			<p>Tercer menú</p>
+		</aside>
 		<footer>
 			<p>Curso original de <a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Openwebinars</a></p>
 			<p>Página validada en <a href="https://validator.w3.org/">validator.w3.org</a></p>
