--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Antonio Martinez Algar"/>
 		<meta name="author" content="Antonio Jesús Pacheco Tortosa"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<title>Inicio</title>
 	</head>
 	<body>
@@ -16,16 +17,16 @@
 			<li><a href="#">Contacto</a></li>
 		  </ul>
 		</nav>
-		<section>
-			<p>Prueba</p>
-		</section>
-		<script src="prueba.js"></script>
-		<button onclick="createParagraph()">¡Presioname!</button>
 		<aside>
 			<p>Primer menú</p>
 			<p>Segundo menú</p>
 			<p>Tercer menú</p>
 		</aside>
+		<section>
+			<p>Prueba</p>
+		</section>
+		<script src="prueba.js"></script>
+		<button onclick="createParagraph()">¡Presioname!</button>
 		<footer>
 			<p>Curso original de <a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Openwebinars</a></p>
 			<p>Página validada en <a href="https://validator.w3.org/">validator.w3.org</a></p>
