Primeros contenidos validados

--- a/html/contenido1.html
+++ b/html/contenido1.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset='utf-8'>
+    <title>contenido1</title>
 </head>
 <body>
     <section>
+        <h2>Contenido del curso:</h2>
         <article>
             <header>
-                <p>Contenido del curso:</p>
+                <h2>Índice</h2>
             </header>
             <ul>
                 <li>Introducción</li>
