--- a/html/contenido2.html
+++ b/html/contenido2.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset='utf-8'>
+    <title>contenido2</title>
 </head>
 <body>
     <section>
+        <h2>Introducción</h2>
         <article>
-            <header>Introducción</header>
-            <p class="subtitulo">Que es javaScript</p>
+            <header>
+                <h2 class="subtitulo">Que es javaScript</h2>
+            </header>
             <p>Es un  lenguaje de programación web comúnmente usado en HTML para controlar la lógica y el comportamiento.</p>
             <p>Se puede usar para desarrollos fronend y backend (navegador y servidor)</p>
         </article>
