Cambios en el diseño

--- a/html/index.html
+++ b/html/index.html
@@ -17,19 +17,19 @@
 			<li><a href="#">Contacto</a></li>
 		  </ul>
 		</nav>
+		<figure>
+			<img src="imagenes/logo.png" alt="Logotipo java-script"/>
+		</figure>
 		<aside>
-			<p>Primer menú</p>
-			<p>Segundo menú</p>
-			<p>Tercer menú</p>
+			<p><a href="">Primer menú</a></p>
+			<p><a href="">Segundo menú</a></p>
+			<p><a href="">Tercer menú</a></p>
 		</aside>
-		<section>
-			<p>Prueba</p>
-		</section>
-		<script src="prueba.js"></script>
-		<button onclick="createParagraph()">¡Presioname!</button>
+		<iframe title="Página" src="paginas/inicio.html">
+		</iframe>
 		<footer>
-			<p>Curso original de <a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Openwebinars</a></p>
-			<p>Página validada en <a href="https://validator.w3.org/">validator.w3.org</a></p>
+			<p><a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Curso original de Openwebinars</a></p>
+			<p><a href="https://validator.w3.org/">Página validada en validator.w3.org</a></p>
 		</footer>
 	</body>
 </html> 
