--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,8 @@
 	</head>
 	<body>
 		<nav class="menu">
-		  <ul>
-			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Contacto</a></li>
-		  </ul>
+			<a href="#">Inicio</a>
+			<a href="#">Contacto</a>
 		</nav>
 		<figure>
 			<img src="imagenes/logo.png" alt="Logotipo java-script"/>
