Cambiado el estilo del nav

--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,8 @@
 	</head>
 	<body>
 		<nav class="menu">
-			<a href="#">Inicio</a>
-			<a href="#">Contacto</a>
+			<a href="#"><p>Inicio</p></a>
+			<a href="#"><p>Contacto</p></a>
 		</nav>
 		<figure>
 			<img src="imagenes/logo.png" alt="Logotipo java-script"/>
@@ -23,7 +23,7 @@
 			<p><a href="">Segundo menú</a></p>
 			<p><a href="">Tercer menú</a></p>
 		</aside>
-		<iframe title="Página" src="paginas/inicio.html">
+		<iframe title="Página" src="paginas/contenido1.html">
 		</iframe>
 		<footer>
 			<p><a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Curso original de Openwebinars</a></p>
