Añadida plantilla, curso y más contenido

--- a/html/paginas/contenido2.html
+++ b/html/paginas/contenido2.html
@@ -11,8 +11,8 @@
             <header>
                 <h2 class="subtitulo">Que es javaScript</h2>
             </header>
-            <p>Es un  lenguaje de programación web comúnmente usado en HTML para controlar la lógica y el comportamiento.</p>
-            <p>Se puede usar para desarrollos fronend y backend (navegador y servidor)</p>
+            <p>Es un lenguaje de programación web comúnmente usado en HTML para controlar la lógica y el comportamiento.</p>
+            <p>Se puede usar para desarrollos frontend y backend (navegador y servidor)</p>
         </article>
     </section>
 </body>
