--- a/html/paginas/contenido4.html
+++ b/html/paginas/contenido4.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset='utf-8'>
-    <title>Plantilla</title>
+    <title>contenido4</title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
