Eliminado contenido 3 (duplicado) y añadidas imágenes a los contenidos

--- a/html/paginas/contenido2.html
+++ b/html/paginas/contenido2.html
@@ -12,7 +12,18 @@
                 <h2 class="subtitulo">Que es javaScript</h2>
             </header>
             <p>Es un lenguaje de programación web comúnmente usado en HTML para controlar la lógica y el comportamiento.</p>
+            <img src="../imagenes/web.png" alt="Composición de una página">
             <p>Se puede usar para desarrollos frontend y backend (navegador y servidor)</p>
+            <table>
+                <tr>
+                    <td>
+                        <img src="../imagenes/frontEnd.png" alt="Tecnologías frontEnd">
+                    </td>
+                    <td>
+                        <img src="../imagenes/backEnd.png" alt="Tecnologías backEnd">
+                    </td>
+                </tr>
+            </table>
         </article>
     </section>
 </body>
