--- a/html/paginas/contenido4.html
+++ b/html/paginas/contenido4.html
@@ -13,9 +13,9 @@
                 <h2>¿Como empezamos?</h2>
             </header>
             <p>Podemos introducir nuestro script de dos maneras con la etiqueta script</p>
-            <!--Imagen de etiqueta script con código-->
+            <p>&lt;script type="text/javascript" >&lt;/script></p>
             <p>para escribir el código en el propio HTML, pero tambien podemos usar</p>
-            <!--Imagen de etiquta script con referencia a un archivo-->
+            <p>&lt;script src=”app.js” >&lt;/script></p>
             <p>para escribir el código en un fichero externo</p>
         </article>
         <article>
