--- a/html/paginas/contenido7.html
+++ b/html/paginas/contenido7.html
@@ -14,20 +14,20 @@
             </header>
             <p>La funciones son un conjunto de tareas que se ejecutan en un nuevo entorno (las variables que se declaren ahí se quedarán ahí)</p>
             <p>Una función tendría este aspecto:</p>
-            <!--Insertar imagen de declaración de función-->
+            <img src="../imagenes/funcion1.png" alt="Declaración de funcion">
             <p>Para ejecutar la función nos basta con llamar a la función de esta manera:</p>
-            <!--Insertar imagen de llamada a la función-->
+            <img src="../imagenes/funcion2.png" alt="Llamada a una función">
             <p>Una función también puede devolver un valor con un return. Esto hará que la función devuelva un valor a terminar su ejecución. La forma de usar el return es esta:</p>
-            <!--Insertar imagen de función con return-->
+            <img src="../imagenes/funcion3.png" alt="Funcion que devuelve un valor">
         </article>
         <article>
             <header>
                 <h2>Funciones anónimas</h2>
             </header>
             <p>La funciones anónimas son una forma de usar funciones la cual no necesita de una declaración previa</p>
-            <!--Imagen de función anónima-->
+            <img src="../imagenes/funcion4.png" alt="Funcion anónima">
             <p>otra forma de usar funciones anónimas es con flecha</p>
-            <!--Imagen de función anónima con flecha-->
+            <img src="../imagenes/funcion5.png" alt="Funcion anónima con flecha">
         </article>
     </section>
 </body>
