--- a/html/paginas/contenido8.html
+++ b/html/paginas/contenido8.html
@@ -15,7 +15,7 @@
             <p>Para resolver nuestro problemas en JavaScript (y en cualquier otro lenguaje) es recomendable que hagamos un diagrama de flujo.  Esto no ayudará a ver las posibles soluciones que le podemos dar a un problema. Para poder pasarlo a JavaScript utilizaremos condicionales.</p>
             <p>Para comprobar si una condición se cumple utilizaremos in, else if, else…</p>
             <p>Y para comparar valores utilizaremos == 0 ≡ (valor, y valor y tipo respectivamente), && (and), || (or), &lt;, > , &lt;= y >=</p>
-            <!--Insertar imagen de uso de lógica-->
+            <img src="../imagenes/funcion6.png" alt="Ejemplo de uso de condicionales y comparadores">
         </article>
     </section>
 </body>
