Subidos los cambios en los css y documentos

--- a/html/formulario.html
+++ b/html/formulario.html
@@ -7,8 +7,8 @@
 		<meta name="author" content="Antonio Martinez Algar"/>
 		<meta name="author" content="Antonio Jesús Pacheco Tortosa"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link rel="stylesheet" type="text/css" href="css/index.css"/>
-		<title>Inicio</title>
+		<link rel="stylesheet" type="text/css" href="css/formulario.css"/>
+		<title>Contacto</title>
 	</head>
 	<body>
 		<nav class="menu">
@@ -18,15 +18,7 @@
 		<figure>
 			<img src="imagenes/logo.png" alt="Logotipo java-script"/>
 		</figure>
-		<aside>
-			<p><a href="paginas/contenido1.html" target="contenidos">Introducción</a></p>
-			<p><a href="paginas/contenido2.html" target="contenidos">Tipos de datos primitivos</a></p>
-			<p><a href="paginas/contenido3.html" target="contenidos">Funciones</a></p>
-			<p><a href="paginas/contenido4.html" target="contenidos">Aplicando lógica con JS</a></p>
-			<p><a href="java_script/matter-js-master/demo/index.html" target="contenidos">Ejemplo de API</a></p>
-			<p><a href="paginas/grafica.html" target="contenidos">Gráfica de los contenidos</a></p>
-		</aside>
-		<embed name="contenidos" title="Página" src="paginas/contenido4.html">
+		<embed name="contenidos" title="Página" src="paginas/formulario.html">
 		</embed>
 		<footer>
 			<p><a href="https://openwebinars.net/academia/portada/javascript-principiantes/">Curso original de Openwebinars</a></p>
