--- a/html/paginas/contenido3.html
+++ b/html/paginas/contenido3.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset='utf-8'>
+	<meta charset='utf-8'>
 	<meta name="description" content="Práctica HLC"/>
 	<meta name="keywords" content="HTML,CSS"/>
 	<meta name="author" content="Antonio Martinez Algar"/>
 	<meta name="author" content="Antonio Jesús Pacheco Tortosa"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="../css/contenidos.css"/>
-    <title>contenido2</title>
+    <title>Contenido3</title>
 </head>
 <body>
     <section>
-        <h2>Introducción</h2>
+        <h2>Creando nuestro primer script</h2>
         <article>
             <header>
-                <h2 class="subtitulo">Que es javaScript</h2>
+                <h2>Que es javaScript</h2>
             </header>
             <p>Es un  lenguaje de programación web comúnmente usado en HTML para controlar la lógica y el comportamiento.</p>
             <p>Se puede usar para desarrollos fronend y backend (navegador y servidor)</p>
