--- a/html/paginas/formulario.html
+++ b/html/paginas/formulario.html
@@ -12,13 +12,17 @@
 </head>
 <body>
     <section>
-        <h2>Introducción</h2>
+        <h2>Escribe tu opinión</h2>
         <article>
             <header>
-                <h2 class="subtitulo">Que es javaScript</h2>
+                <h2 class="subtitulo">Tus datos</h2>
             </header>
-            <p>Es un  lenguaje de programación web comúnmente usado en HTML para controlar la lógica y el comportamiento.</p>
-            <p>Se puede usar para desarrollos fronend y backend (navegador y servidor)</p>
+			<form action="formulario.html">
+				<p class="formulario">Correo electrónico: <input name="correo" type="text"></p>
+				<p class="formulario">Nombre: <input name="nombre" type="text"></p>
+				<p class="formulario">Apellidos: <input name="apellidos" type="text"></p>
+				<input type="submit">
+			</form>
         </article>
     </section>
 </body>
